--- a/warehouse/templates/page.html
+++ b/warehouse/templates/page.html
@@ -11,13 +11,19 @@
 	<div id="app" class="container">
 		<div class="row">
 			<form class="col s12">
-				<div class="input-field col s4">
+				<div class="input-field col s6">
 					<input placeholder="Product" v-model='item.product' type="text" id="product">	
 				</div>
-				<div class="input-field col s4">
+				<div class="input-field col s6">
 					<input placeholder="Quantity" v-model='item.quantity' type="number" id="quantity">
 				</div>
-				<div class="input-field col s4">
+				<div class="input-field col s6">
+					<input placeholder="Price" v-model='item.price' type="number" id="price">
+				</div>
+				<div class="input-field col s6">
+					<input placeholder="Shipping Tax" v-model='item.tax' type="number" id="tax">
+				</div>
+				<div class="input-field col s12 center">
 					<button class="waves-effect waves-light btn" type="reset" v-on:click='addToList'><i class="material-icons right">add</i>Add to List</button>
 				</div>				
 			</form>
@@ -25,7 +31,14 @@
 
 		<ul class="collection with-header">
 			<li class="collection-header"><h4>Itens</h4></li>
-			<li class="collection-item" v-for="obj in itens"><div>[[obj.product]]<div class="secondary-content">[[obj.quantity]]</div></div></li>
+			<li v-for="obj in itens" class="collection-item">
+				<span class="title">[[ obj.product ]]</span>
+				<p>
+				Quantity: [[ obj.quantity ]] <br>
+				Price: R$ [[ obj.price ]] <br>
+				Shipping Tax: R$ [[ obj.tax ]] <br>
+				</p>
+			</li>
 		</ul>
 
 		<button v-on:click='sendItens' class="btn">Submit <i class="material-icons right">send</i></button>
@@ -41,14 +54,18 @@
 			},
 			methods: {
 				addToList: function() {
-					if (this.item.product && this.item.quantity) {
+					if (this.item.product && this.item.quantity && this.item.tax && this.item.price) {
 						this.itens.push({
 							product: this.item.product,
-							quantity: this.item.quantity
+							quantity: this.item.quantity,
+							price: this.item.price,
+							tax: this.item.tax
 						})
 
 						this.item.product = ''
 						this.item.quantity = ''
+						this.item.price = ''
+						this.item.tax = ''
 						
 						console.log(this.itens)
 					}
