--- a/customer/templates/page.html
+++ b/customer/templates/page.html
@@ -2,30 +2,139 @@
 <html>
 <head>
 	<title>Customer</title>
+	<script src="https://unpkg.com/vue/dist/vue.js"></script>
 	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-	<div class="container">
+	<div id="app" class="container">
+		<!-- navbar -->
 		<nav>
 			<div class="nav-wrapper">
-				<a href="" class="brand-logo center">Magazine Ana Luiza</a>
+				<a href="" onclick="return false" v-on:click="hideCart" class="brand-logo center">Magazine Ana Luiza</a>
 				<ul id="nav-mobile" class="right hide-on-med-and-down">
-					<li><a href="">My Cart</a></li>
+					<li v-on:click="showCart"><a>My Cart ([[ cart_length ]])</a></li>
 					<li><a href="">Login</a></li>
 				</ul>
 			</div>
 		</nav>
-		<div class="collection">
+		
+		<!-- itens -->
+		<div class="collection" v-if="!show_cart">
 			{% for product in products %}
-				<a href="" class="collection-item">
+				<a class="collection-item">
+					<span class="badge" v-on:click="addToCart('{{product}}', {{products.get(product).get('price')}})"><i class="material-icons">add_shopping_cart</i></span>
 					<span class="badge">{{ products.get(product).get('quantity') }} in stock</span>
-					<span class="badge">R$ {{products.get(product).get('price')}}</span>
+					<span class="badge">R$ {{ products.get(product).get('price') }}</span>
 					{{product}}
 				</a>
 			{% endfor %}
 		</div>
+
+		<!-- cart -->
+		<div v-else>
+			<div class="row">
+				<div class="col s12 m4" v-for="quantity, product in cart">
+					<div class="card blue-grey darken-1">
+						<div class="card-content white-text">
+							<span class="card-title">[[ product ]] <br> R$ [[ prices[product] ]]</span>
+							<p>Quantity: [[ quantity ]]</p>
+							<p>Total: R$ [[ quantity * prices[product] ]]</p>
+						</div>
+						<div class="card-action">
+							<button class="btn-floating red" v-on:click="addOneItem(product)"><i class="material-icons">add</i></button>
+							<button class="btn-floating red" v-on:click="removeOneItem(product)"><i class="material-icons">remove</i></button>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="card-panel teal lighten-2">
+				<h6 class="white-text">Itens in cart: R$ [[ getItensTotal() ]]</h6>
+				<h6 class="white-text">Shipping Tax: R$ [[ shipping.tax ]]</h6>
+				<h5 class="white-text">Total: R$ [[ getItensTotal() + shipping.tax ]]</h5>
+
+				<button class="btn" v-on:click="calcShippingTax">Calculate Shipping Tax</button>
+				<button class="btn">Proceed to checkout</button>
+			</div>
+		</div>
 	</div>
+
+	<script type="text/javascript">
+		var app = new Vue({
+			el: '#app',
+			delimiters: ['[[', ']]'],
+			data: function() {
+				return {
+					cart: {},
+					prices: {},
+					cart_length: 0,
+					show_cart: false,
+					shipping: {
+						tax: 0,
+						warehouse_location: ''
+					}
+				}
+			},
+			methods: {
+				addToCart: function(product, price) {
+					if (product in this.cart) {
+						this.cart[product] += 1
+					} else {
+						this.cart[product] = 1
+						this.prices[product] = price
+						this.cart_length += 1
+					}
+				},
+				getItensTotal: function() {
+					var total = 0
+					
+					for (product in this.cart) {
+						total += this.cart[product] * this.prices[product]
+					}
+
+					return total
+				},
+				calcShippingTax: function() {
+					this.getShippingTax(this.shipping)
+					this.hideCart()
+					this.showCart()
+				},
+				getShippingTax: function(shipping) {
+					if (this.cart_length > 0) {
+						var data = null
+						axios.post('/get_shipping_tax', this.cart)
+							.then(function(response) {
+								shipping.tax = response.data.tax
+								shipping.warehouse_location = response.data.warehouse_location
+							})
+					}
+				},
+				showCart: function() {
+					this.show_cart = true
+				},
+				hideCart: function() {
+					this.show_cart = false
+				},
+				addOneItem: function(product) {
+					this.cart[product] += 1
+					this.hideCart()
+					this.showCart()
+				},
+				removeOneItem: function(product) {
+					this.cart[product] -= 1
+					
+					if (this.cart[product] == 0) {
+						delete this.cart[product]
+						this.cart_length -= 1
+					}
+					
+					this.hideCart()
+					this.showCart()
+				}
+			}
+		})
+	</script>
 </body>
 </html>
