--- a/customer/templates/page.html
+++ b/customer/templates/page.html
@@ -36,7 +36,7 @@
 		<div v-else>
 			<div class="row">
 				<div class="col s12 m4" v-for="quantity, product in cart">
-					<div class="card blue-grey darken-1">
+					<div class="card teal lighten-2">
 						<div class="card-content white-text">
 							<span class="card-title">[[ product ]] <br> R$ [[ prices[product] ]]</span>
 							<p>Quantity: [[ quantity ]]</p>
@@ -50,7 +50,7 @@
 				</div>
 			</div>
 
-			<div class="card-panel teal lighten-2">
+			<div class="card-panel teal">
 				<h6 class="white-text">Itens in cart: R$ [[ getItensTotal() ]]</h6>
 				<h6 class="white-text">Shipping Tax: R$ [[ shipping.tax ]]</h6>
 				<h5 class="white-text">Total: R$ [[ getItensTotal() + shipping.tax ]]</h5>
@@ -86,6 +86,7 @@
 						this.prices[product] = price
 						this.cart_length += 1
 					}
+					this.shipping.tax = 0
 				},
 				getItensTotal: function() {
 					var total = 0
@@ -116,7 +117,9 @@
 						axios.post('/proceed_checkout', {itens: this.cart, warehouse_location: this.shipping.warehouse_location}).then(function(response) {
 							//console.log(response.data)
 							alert(response.data.message)
-							window.location.reload()
+							if (response.data.done) {
+								window.location.reload()
+							}
 						})
 					}
 				},
@@ -128,11 +131,13 @@
 				},
 				addOneItem: function(product) {
 					this.cart[product] += 1
+					this.shipping.tax = 0
 					this.hideCart()
 					this.showCart()
 				},
 				removeOneItem: function(product) {
 					this.cart[product] -= 1
+					this.shipping.tax = 0
 					
 					if (this.cart[product] == 0) {
 						delete this.cart[product]
