--- a/customer/templates/page.html
+++ b/customer/templates/page.html
@@ -12,7 +12,7 @@
 		<!-- navbar -->
 		<nav>
 			<div class="nav-wrapper">
-				<a href="" onclick="return false" v-on:click="hideCart" class="brand-logo center">Magazine Ana Luiza</a>
+				<a href="" onclick="return false" v-on:click="hideCart" class="brand-logo center">Ecommerce</a>
 				<ul id="nav-mobile" class="right hide-on-med-and-down">
 					<li v-on:click="showCart"><a>My Cart ([[ cart_length ]])</a></li>
 				</ul>
